--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.5.2",
     "next": "13.5.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "sass": "^1.60.0"
   }
 }
